--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
   "require": {
     "php": "^8.3",
     "laravel/framework": "^11.9.2",
-    "laravel/tinker": "^2.9"
+    "laravel/tinker": "^2.9",
+    "livewire/livewire": "^3.5",
+    "stancl/tenancy": "^3.8"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23.1",
