Working on integrating mary ui

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "laravel/framework": "^11.9.2",
     "laravel/tinker": "^2.9",
     "livewire/livewire": "^3.5",
+    "livewire/volt": "^1.6",
+    "robsontenorio/mary": "^1.32",
     "stancl/tenancy": "^3.8.4"
   },
   "require-dev": {
